--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,2 @@
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
-POSTGRES_USER=admin
-POSTGRES_PASSWORD=admin
-POSTGRES_DB=nestjs
 PORT=5000
+DATABASE_URL=postgres://admin:admin@localhost:5432/nestjs
