got db migrations working

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,11 @@
 version: '3'
 services:
-  postgres:
-    image: mdillon/postgis:10-alpine
-    restart: always
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: '${POSTGRES_DB}'
-    volumes:
-      - postgres:/var/lib/postgresql/data
-    ports:
-      - 5432:5432
-
-volumes:
-  postgres:
+    postgres:
+        image: mdillon/postgis:10-alpine
+        restart: always
+        environment:
+            POSTGRES_USER: ${POSTGRES_USER}
+            POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+            POSTGRES_DB: ${POSTGRES_DB}
+        ports:
+            - ${POSTGRES_PORT}:5432
