--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
-PORT=5000
-DATABASE_URL=postgres://admin:admin@localhost:5432/nestjs
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5000
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=admin
+POSTGRES_DB=nestjs
+APP_PORT=3001
+MODE=DEV
