--- a/package.json
+++ b/package.json
@@ -5,23 +5,25 @@
 	"author": "",
 	"private": true,
 	"license": "UNLICENSED",
-	"engines": {
-		"node": "10.x"
-	},
+	"types": "index.d.ts",
 	"scripts": {
 		"prebuild": "rimraf dist",
 		"build": "nest build",
 		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
 		"start": "nest start",
-		"start:dev": "nest start --watch",
+		"start:dev": "MODE=DEV nest start --watch",
 		"start:debug": "nest start --debug --watch",
-		"start:prod": "node dist/main",
+		"start:prod": "MODE=PROD node dist/main",
 		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
 		"test": "jest",
 		"test:watch": "jest --watch",
 		"test:cov": "jest --coverage",
 		"test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-		"test:e2e": "jest --config ./test/jest-e2e.json"
+		"test:e2e": "jest --config ./test/jest-e2e.json",
+		"typeorm": "ts-node --files -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config src/config/ormconfig.ts",
+		"db:migrate:create": "yarn typeorm -d src/migration migration:create",
+		"db:migrate": "yarn typeorm migration:run",
+		"db:migrate:down": "yarn typeorm migration:revert"
 	},
 	"dependencies": {
 		"@nestjs/common": "^7.0.0",
