--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,10 @@
 		"removeComments": true,
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
-		"allowSyntheticDefaultImports": true,
-		"target": "es2017",
+		"target": "ES2020",
 		"sourceMap": true,
 		"outDir": "./dist",
-		"baseUrl": "./",
-		"incremental": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true
-	}
+		"baseUrl": "./"
+	},
+	"exclude": ["node_modules", "dist"]
 }
