--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ POSTGRES_PORT=5000
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=admin
 POSTGRES_DB=nestjs
-APP_PORT=3001
+PORT=3001
 MODE=DEV
 
 HEROKU_APP=still-inlet-20219
