--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
 	"private": true,
 	"license": "UNLICENSED",
 	"types": "index.d.ts",
+	"engines": {
+		"yarn": "1.x"
+	},
 	"scripts": {
+		"heroku-postbuild": "yarn db:migrate",
 		"prebuild": "rimraf dist",
 		"build": "nest build",
 		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
 		"start": "nest start",
 		"start:dev": "MODE=DEV nest start --watch",
 		"start:debug": "nest start --debug --watch",
-		"start:prod": "MODE=PROD node dist/main",
+		"start:prod": "MODE=PROD node dist/main.js",
 		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
 		"test": "jest",
 		"test:watch": "jest --watch",
@@ -21,8 +25,8 @@
 		"test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
 		"test:e2e": "jest --config ./test/jest-e2e.json",
 		"typeorm": "ts-node --files -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config src/config/ormconfig.ts",
-		"db:migrate:create": "yarn typeorm -d src/migration migration:create",
 		"db:migrate": "yarn typeorm migration:run",
+		"db:migrate:create": "yarn typeorm -d src/migration migration:create",
 		"db:migrate:down": "yarn typeorm migration:revert"
 	},
 	"dependencies": {
@@ -36,7 +40,11 @@
 		"reflect-metadata": "^0.1.13",
 		"rimraf": "^3.0.2",
 		"rxjs": "^6.5.4",
+		"ts-loader": "^6.2.1",
+		"ts-node": "9.0.0",
+		"tsconfig-paths": "^3.9.0",
 		"typeorm": "^0.2.26",
+		"typescript": "^3.7.4",
 		"uuid": "^8.3.0"
 	},
 	"devDependencies": {
@@ -45,7 +53,7 @@
 		"@nestjs/testing": "^7.0.0",
 		"@types/express": "^4.17.3",
 		"@types/jest": "26.0.10",
-		"@types/node": "^13.9.1",
+		"@types/node": "14.14.6",
 		"@types/supertest": "^2.0.8",
 		"@typescript-eslint/eslint-plugin": "3.9.1",
 		"@typescript-eslint/parser": "3.9.1",
@@ -55,11 +63,7 @@
 		"jest": "26.4.2",
 		"prettier": "^1.19.1",
 		"supertest": "^4.0.2",
-		"ts-jest": "26.2.0",
-		"ts-loader": "^6.2.1",
-		"ts-node": "9.0.0",
-		"tsconfig-paths": "^3.9.0",
-		"typescript": "^3.7.4"
+		"ts-jest": "26.2.0"
 	},
 	"jest": {
 		"moduleFileExtensions": [
