--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,3 @@
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5000
-POSTGRES_USER=admin
-POSTGRES_PASSWORD=admin
-POSTGRES_DB=nestjs
-PORT=3001
-MODE=DEV
+DATABASE_URL=postgresql://admin:admin@localhost:5000/nestjs
 
 HEROKU_APP=still-inlet-20219
