--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"start": "nest start",
 		"start:dev": "MODE=DEV nest start --watch",
 		"start:debug": "nest start --debug --watch",
-		"start:prod": "MODE=PROD node dist/main.js",
+		"start:prod": "echo $(pwd) && MODE=PROD node dist/main.js",
 		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
 		"test": "jest",
 		"test:watch": "jest --watch",
