--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
 		"target": "ES2020",
 		"sourceMap": true,
 		"outDir": "./dist",
-		"baseUrl": "./"
+		"baseUrl": "./",
+		"esModuleInterop": true
 	},
 	"exclude": ["node_modules", "dist"]
 }
